<resources>
    <string name="app_name">Website monitor</string>
    <string name="action_settings">Settings</string>

    <string name="name">Name</string>
    <string name="create_entry">Create Website Entry</string>
    <string name="url">URL</string>
    <string name="save">Save</string>
    <string name="search_here">Search</string>
    <string name="update">Update</string>
    <string name="update_entry">Update Entry</string>
    <string name="enter_valid_name">Enter valid name</string>
    <string name="enter_valid_url">Enter valid url</string>
    <string name="choose_interval">Choose Interval</string>
    <string name="cancel">Cancel</string>
    <string name="monitoring_interval">Monitoring Interval</string>
    <string name="checking_every_15_mins">Checking every 15 mins</string>
    <string name="message_auto_start_reason">Your device may kill the app process, when it is in the background. Therefore, it is recommended to enable the auto start option in the settings.</string>
    <string name="enable_auto_start">Enable Auto start</string>
    <string name="ok">OK</string>
    <string name="icon_credits">Logo Icon made by Freepik from Flaticon\nhttps://www.flaticon.com/authors/freepik</string>
    <string name="source_code_link" translatable="false">https://gitlab.com/manimaran/website-monitor</string>
    <string name="no_apps_found">No browser found</string>
    <string name="credits">Credits</string>
    <string name="source_code">Source Code</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="visit">Visit</string>
    <string name="refresh">Refresh</string>
    <string name="not_working">%s - Not Working!</string>
    <string name="site_refreshing">Refreshing… - %s</string>
    <string name="monitor_paused">Monitoring paused - %s</string>
    <string name="monitor_resumed">Monitoring resumed - %s</string>
    <string name="confirmation">Confirmation</string>
    <string name="remove_confirmation_message">Do you want to remove?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="support_development">Support development</string>
    <string name="support_development_link" translatable="false">Buy a Coffee for the Developer\nhttps://www.paypal.me/manimaran24</string>
    <string name="contributors_main_title">Main Contributors</string>
    <string name="contributors_main_akito" translatable="false">Akito\nhttps://github.com/theAkito</string>
    <string name="contributors_main_manimaran" translatable="false">Manimaran\nhttps://gitlab.com/manimaran</string>
    <string name="notify_only_server_issues">Notify only Server issues</string>
    <string name="notify_only_server_side_issues_info">Notify only server side issues (Error Codes 5xx). Do not notify on client side errors, like internet and 4xx issues.</string>
    <string name="stop">Stop</string>
    <string name="provide_custom_monitor_values">Provide custom monitor values</string>
    <string name="enter_duration">Enter duration for per execution</string>
    <string name="minute_once">Minute once</string>
    <string name="second_once">Second once</string>
    <string name="custom_monitor_process_warning">Actually this process may take more power consumption. Because this process will run continuously until you stop/close the app.</string>
    <string name="custom_monitor_agree"><![CDATA[Yes, I Agree & am aware of what this process does.]]></string>
    <string name="start">Start</string>
    <string name="custom_monitor">Custom monitor</string>
    <string name="show_notification">Show notification</string>
    <string name="custom_monitor_running_info">Custom monitor Running… \nMonitoring every %1$s\nCount : %2$s</string>
    <string name="error_read_and_agree_checkbox"><![CDATA[Read & Agree the checkbox]]></string>
    <string name="enter_valid_input">Enter valid input</string>
    <string name="check_internet">Please check your internet connection!</string>
    <string name="several_websites_not_reachable">Several Websites are not reachable!</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="action_refresh_title">Refresh</string>
    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="disable_dark_mode">Disable dark mode</string>
    <string name="enable_or_disable_dark_mode">Enable/Disable Dark mode</string>

    <string name="backup_restore">Backup &amp; Restore</string>
    <string name="backup_restore_info">Save your sites and settings to a file, and restore them after reinstalling the app.</string>
    <string name="export_data">Export</string>
    <string name="import_data">Import</string>
    <string name="backup_default_file_name">website-monitor-backup.json</string>
    <string name="backup_export_success">Backup saved</string>
    <string name="backup_import_success">Restored %d site(s)</string>
    <string name="backup_error">Backup failed. Please try again.</string>
    <string name="import_confirm_title">Import backup?</string>
    <string name="import_confirm_message">This will replace your current sites and settings with the contents of the selected file.</string>
</resources>