<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/btnMonitorInterval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:text="@string/monitoring_interval"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtIntervalDetails"
                android:layout_width="match_parent"
                android:text="@string/checking_every_15_mins"
                android:layout_marginTop="4dp"
                android:textSize="@dimen/text_small"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutEnableAutoStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:text="@string/enable_auto_start"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:text="@string/message_auto_start_reason"
                android:textSize="@dimen/text_small"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEnableAutoStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:cornerRadius="5dp"
                app:backgroundTint="@color/colorAccent"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/enable_auto_start"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnNotifyOnlyServerIssue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:text="@string/notify_only_server_issues"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchNotifyOnlyServerIssues"
                android:layout_width="match_parent"
                app:switchPadding="10dp"
                android:text="@string/notify_only_server_side_issues_info"
                android:textSize="@dimen/text_small"
                android:checked="false"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnDarkMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:text="@string/enable_or_disable_dark_mode"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchDarkMode"
                android:layout_width="match_parent"
                app:switchPadding="10dp"
                android:text="@string/enable_dark_mode"
                android:textSize="@dimen/text_small"
                android:checked="false"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>


</ScrollView>